# pro-hoops-manager

./: .gitignore  README.md  export_logos.js  fix_scene.gd  opencode.json  test_load.gd
.agents/: mcp.json  mcp_config.json
.opencode/: summary.md
.opencode/agents/: character-designer.md  coach.md  gimp-master.md  godot-2d.md  godot-gdextension.md  godot-gdscript.md  godot-performance.md  godot-ui.md  rust-simulation.md
godot/: basket_manager.gdextension  basket_manager.gdextension.uid  fix_scene.gd  fix_scene.gd.uid  generate_rows.gd  generate_rows.gd.uid  project.godot  test_dash.gd  test_dash.gd.uid  test_swap.gd  test_swap.gd.uid  theme.tres  ui_theme.tres  update_theme.gd  update_theme.gd.uid
godot/scenes/: dashboard.tscn  finance.tscn  inbox.tscn  league.tscn  main.tscn  match.tscn  new_game.tscn  player_profile.tscn  scouting.tscn  start_screen.tscn  tactics.tscn  team.tscn  training.tscn
godot/scripts/: bench_row.gd  bench_row.gd.uid  court_2d.gd  court_2d.gd.uid  court_lines.gd  court_lines.gd.uid  dashboard.gd  dashboard.gd.uid  finance.gd  finance.gd.uid  inbox.gd  (+29 more)
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/ai/: coach_ai.rs  mod.rs
rust/src/bridge/: convert.rs  engine_class.rs  mod.rs
rust/src/db/: mod.rs  schema.rs
rust/src/engine/: clock.rs  collision_resolver.rs  decisions.rs  finance.rs  logging.rs  manager.rs  match_simulator.rs  mod.rs  movement.rs  names.rs  params.rs  playbook.rs  player.rs  possession.rs  rebound.rs  shot_resolver.rs  systems.rs  team.rs  types.rs
rust/src/state/: game_state.rs  mod.rs
rust/src/worker/: mod.rs
(+127 files in other folders)
