[package]
name = "basket-ball-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
glam = { version = "0.29", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
